# PhotoPulse

./: .gitignore  Dockerfile  LIVE2D_INTEGRATION.md  README.md  capture_live2d.mjs  package-lock.json  package.json  pnpm-lock.yaml  screenshot.mjs  vite.config.ts
.github/workflows/: build.yml  ci.yml
public/: config.json
scripts/: release.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: Carousel.tsx  Crypto.tsx  DebugPanel.tsx  Live2DModel.tsx  Stock.tsx  Weather.tsx  WeatherEffects.css  WeatherEffects.tsx  WidgetContainer.tsx
src/components/weather/: Cloudy.module.css  Cloudy.tsx  Fog.module.css  Fog.tsx  Lightning.module.css  Lightning.tsx  Rain.module.css  Rain.tsx  Snow.module.css  Snow.tsx  Sun.module.css  Sun.tsx  Vignette.module.css  Vignette.tsx
src/services/: config.ts
src/utils/: system.ts
