[package]
name = "photopulse"
version = "0.2.0"
description = "Repurpose your idle devices into a smart photo frame"
authors = ["bingliang-zh"]
edition = "2021"
repository = "https://github.com/bingliang-zh/PhotoPulse"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2"
reqwest = { version = "0.12.24", features = ["json"] }
tauri-plugin-fs = "2"


